# repro-tarfile

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  repro_tarfile.py  tests.py
.github/: codecov.yml
.github/workflows/: release-cli.yml  release-lib.yml  tests.yml
cli/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  rptar.py
examples/: demo_vs_tarfile.py  usage.py
repro_tarfile/: __init__.py  __init__.pyi
tests/: conftest.py  test_cli.py  test_core.py  utils.py
