
[project]
name = "rptar"
version = "0.1.2"
description = "A lightweight command-line program for creating reproducible/deterministic tar archives."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
keywords = ["tarfile", "tar", "reproducible", "deterministic", "cli"]
authors = [{ name = "DrivenData", email = "info@drivendata.org" }]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: System :: Archiving :: Packaging",
]
dependencies = ["repro-tarfile", "typer>=0.9.0", "typing_extensions>=3.9 ; python_version < '3.9'"]

[project.scripts]
rptar = "rptar:app"

[project.urls]
Documentation = "https://github.com/drivendataorg/repro-tarfile#readme"
Issues = "https://github.com/drivendataorg/repro-tarfile/issues"
Source = "https://github.com/drivendataorg/repro-tarfile/tree/main/cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "vspect",
]
